<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center"
  android:padding="20dp">

  <com.google.android.material.textview.MaterialTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/about_dialog_title_and_version"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textAlignment="center"
    android:layout_marginBottom="20dp"/>

  <com.google.android.material.textview.MaterialTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/about_dialog_license"
    android:textSize="15sp"
    android:textStyle="normal"
    android:textAlignment="textStart"
    android:layout_marginBottom="10dp"/>

  <com.google.android.material.textview.MaterialTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/about_dialog_developed_by"
    android:textSize="15sp"
    android:textStyle="normal"
    android:textAlignment="textStart"
    android:layout_marginBottom="10dp"/>

  <com.google.android.material.textview.MaterialTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/about_dialog_source_code_label"
    android:textSize="15sp"
    android:textStyle="normal"
    android:textAlignment="textStart"
    android:layout_marginBottom="10dp"/>

  <com.google.android.material.textview.MaterialTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/about_dialog_source_code_url"
    android:textSize="15sp"
    android:textStyle="normal"
    android:textAlignment="textStart"/>

</LinearLayout>
