<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <ImageView
      android:id="@+id/activity_add_edit_token_issuer_image"
      android:src="@drawable/issuer_icon_unknown"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginBottom="25dp" />

    <TextView
      android:id="@+id/activity_add_edit_token_issuer_label"
      android:text="@string/activity_add_edit_token_issuer_field_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:textSize="15sp"
      android:textStyle="bold"
      android:textAlignment="center" />

    <EditText
      android:id="@+id/activity_add_edit_token_issuer_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:hint="@string/activity_add_edit_token_issuer_field_hint"
      android:inputType="text" />

    <TextView
      android:id="@+id/activity_add_edit_token_account_label"
      android:text="@string/activity_add_edit_token_account_field_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:textSize="15sp"
      android:textStyle="bold"
      android:textAlignment="center" />

    <EditText
      android:id="@+id/activity_add_edit_token_account_input"
      android:hint="@string/activity_add_edit_token_account_field_hint"
      android:inputType="text"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:layout_marginBottom="20dp"/>

    <TextView
      android:id="@+id/activity_add_edit_token_category_label"
      android:text="@string/activity_add_edit_token_category_field_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:textSize="15sp"
      android:textStyle="bold"
      android:textAlignment="center" />

    <Spinner
      android:id="@+id/activity_add_edit_token_category_input"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:layout_marginBottom="20dp"/>

    <TextView
      android:id="@+id/activity_add_edit_token_algorithm_label"
      android:text="@string/activity_add_edit_token_algorithm_field_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:textSize="15sp"
      android:textStyle="bold"
      android:textAlignment="center" />

    <Spinner
      android:id="@+id/activity_add_edit_token_algorithm_input"
      android:entries="@array/activity_add_edit_token_algorithm_field_values"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:layout_marginBottom="20dp"/>

    <TextView
      android:id="@+id/activity_add_edit_token_digits_label"
      android:text="@string/activity_add_edit_token_digits_field_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:textSize="15sp"
      android:textStyle="bold"
      android:textAlignment="center" />

    <Spinner
      android:id="@+id/activity_add_edit_token_digits_input"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:entries="@array/activity_add_edit_token_digits_field_values"
      android:layout_marginBottom="20dp"/>

    <TextView
      android:id="@+id/activity_add_edit_token_period_label"
      android:text="@string/activity_add_edit_token_period_field_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:textSize="15sp"
      android:textStyle="bold"
      android:textAlignment="center" />

    <Spinner
      android:id="@+id/activity_add_edit_token_period_input"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:entries="@array/activity_add_edit_token_period_field_values"
      android:layout_marginBottom="20dp"/>

    <TextView
      android:id="@+id/activity_add_edit_token_secret_label"
      android:text="@string/activity_add_edit_token_secret_field_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:textSize="15sp"
      android:textStyle="bold"
      android:textAlignment="center" />

    <EditText
      android:id="@+id/activity_add_edit_token_secret_input"
      android:hint="@string/activity_add_edit_token_secret_field_hint"
      android:inputType="text"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:layout_marginBottom="25dp"/>

    <GridLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center"
      android:rowCount="2"
      android:columnCount="2">

      <ImageButton
        android:id="@+id/activity_add_edit_token_scan_qr_code_button"
        android:src="@drawable/core_icon_qr_code_scanner"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center|left" />

      <TextView
        android:text="@string/activity_add_edit_token_scan_qr_code_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center|left"
        android:paddingLeft="10dp"/>

      <ImageButton
        android:id="@+id/activity_add_edit_token_load_uri_button"
        android:src="@drawable/core_icon_link"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center|left"/>

      <TextView
        android:text="@string/activity_add_edit_token_load_otpauth_uri_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center|left"
        android:paddingLeft="10dp"/>

    </GridLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center"
      android:layout_marginTop="25dp">

      <Button
        android:id="@+id/activity_add_edit_token_cancel_button"
        android:text="@string/activity_add_edit_token_cancel_button_text"
        android:textAllCaps="true"
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

      <Button
        android:id="@+id/activity_add_edit_token_save_button"
        android:text="@string/activity_add_edit_token_approve_button_text"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    </LinearLayout>

  </LinearLayout>

</ScrollView>

