<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center"
  android:padding="20dp">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/dialog_password_define_enter_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password_define_dialog_enter_password_hint">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/dialog_password_define_confirm_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password_define_dialog_confirm_password_hint"
    android:layout_marginTop="25dp">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"/>

  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_gravity="center"
    android:text="@string/password_define_dialog_password_hint_message"
    android:textAlignment="center"
    android:textColor="?colorError"
    android:textSize="12sp" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginTop="25dp">

    <Button
      android:id="@+id/dialog_password_define_cancel_button"
      android:text="@string/password_define_dialog_cancel_button_text"
      android:textAllCaps="true"
      android:layout_marginEnd="5dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/dialog_password_define_approve_button"
      android:text="@string/password_define_dialog_approve_button_text"
      android:textAllCaps="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  </LinearLayout>

</LinearLayout>