<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center"
  android:padding="20dp">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/dialog_enter_otpauth_uri_entered_uri"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/dialog_enter_otpauth_uri_entered_uri_hint">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textUri"/>

  </com.google.android.material.textfield.TextInputLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginTop="25dp">

    <Button
      android:id="@+id/dialog_enter_otpauth_uri_cancel_button"
      android:text="@string/dialog_enter_otpauth_uri_cancel_button_text"
      android:textAllCaps="true"
      android:layout_marginEnd="5dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/dialog_enter_otpauth_uri_approve_button"
      android:text="@string/dialog_enter_otpauth_uri_approve_button_text"
      android:textAllCaps="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  </LinearLayout>

</LinearLayout>