<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center"
  android:padding="20dp">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginBottom="5dp">

    <ImageButton
      android:id="@+id/activity_export_tokens_scan_qr_code_button"
      android:src="@drawable/core_icon_qr_code_scanner"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_gravity="center"/>

    <ImageButton
      android:id="@+id/activity_export_tokens_load_file_button"
      android:src="@drawable/core_icon_file_open"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_gravity="center"/>

  </LinearLayout>

  <TextView
    android:text="@string/activity_export_tokens_protect_with_public_key_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textAlignment="center"
    android:layout_marginBottom="5dp"/>

  <TextView
    android:text="@string/activity_export_tokens_protect_with_public_key_description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textSize="15sp"
    android:textStyle="normal"
    android:textAlignment="center"
    android:layout_marginBottom="5dp"/>

  <ImageButton
    android:id="@+id/activity_export_tokens_enter_password_button"
    android:src="@drawable/core_icon_password"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginBottom="5dp"/>

  <TextView
    android:text="@string/activity_export_tokens_protect_with_password_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textAlignment="center"
    android:layout_marginBottom="5dp"/>

  <TextView
    android:text="@string/activity_export_tokens_protect_with_password_description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textSize="15sp"
    android:textStyle="normal"
    android:textAlignment="center"/>

</LinearLayout>
